infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  # number of pods to run
  replicas: 1
  selector:
    matchLabels:
      app: auth
  # how to create each individual pod
  template:
    metadata:
      labels:
        app: auth
    # tell the pod how to behave
    spec:
      containers:
        - name: auth
          image: downing034/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 8000
      targetPort: 8000
